[package]
name = "mtnrust"
version = "1.0.0"
edition = "2021"
description = "This a start for rust publish done by Metin Ilhan, will be improved later" 
homepage = "https://github.com/metinilhan/mtnrust"
repository = "https://github.com/metinilhan/mtnrust" 
keywords = ["metinilhan", "Mtn"]
categories = ["game-engines"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
